# auth_system_with_reddis

./: Dockerfile  README.md  docker-compose.yaml  env.example  pyproject.toml
app/: config.py  main.py  redis_client.py
app/endpoints/: auth.py
app/routers/: web_router.py
app/static/: style.css
app/templates/: base.html  block_user.html  content.html  debug.html  login.html
app/utils/: auth.py  dependencies.py
